# dtlc

./: Cargo.toml  README.md
.github/workflows/: rust.yml
lib/: prelude.dtl
src/: decl.rs  env.rs  error.rs  expr.rs  grammar.lalrpop  infer.rs  item.rs  lib.rs  macros.rs  main.rs  norm.rs  parser.rs  repl.rs  term.rs  tests.rs  token.rs  typeck.rs
src/check/: block.rs  case.rs  decls.rs  id.rs  infer.rs  meta.rs  mod.rs  norm.rs  state.rs  unification.rs  unify.rs
src/syntax/: abs.rs  desugar.rs  mod.rs  parser.rs  pattern.rs  tele_len.rs  token.rs
src/syntax/core/: dbi.rs  decl.rs  fold.rs  free_subst.rs  mod.rs  pats.rs  pretty.rs  redex.rs  subst.rs  term.rs
src/syntax/surf/: decl.rs  expr.rs  lit.rs  meta_attr.rs  mod.rs
src/tests/syntax/: mod.rs  subst.rs
tests/: beta_eq.rs
