[package]
name = "dtlc"
version = "0.1.0"
edition = "2021"

[dependencies]
pest = "2.1.3"
codespan = "0.11.1"
codespan-reporting = "0.11.1"
lalrpop-util = { version = "0.19.6", features = ["lexer"] }
regex = "1"
rustyline = "9.0.0"
logos = "0.12.0"
derive_more = "0.99.16"
owo-colors = "3.0.1"

thiserror = "1.0.30"
eyre = "0.6.5"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"

[build-dependencies]
lalrpop = "0.19.6"
