[package]
name = "dtlc"
version = "0.1.0"
edition = "2021"

[dependencies]
logos = "0.12.0"
lalrpop-util = { version = "0.19.6", features = ["lexer"] }
regex = "1"
codespan = "0.11.1"
codespan-reporting = "0.11.1"
rustyline = "9.0.0"
derive_more = "0.99.16"
logru = "0.2.0"
vec1 = "1"

thiserror = "1.0.30"
eyre = "0.6.5"
log = "0.4.14"
env_logger = "0.9.0"
itertools = "0.10.3"
# used only for calculating spans
pest = "2.1.3"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
walkdir = "2.3.2"
rand = "0.8.5"

[build-dependencies]
lalrpop = "0.19.6"
